@@ -2,6 +2,8 @@
 
   1. Wire location through load, extract, and query jobs.
 
+  2. Always require at least 2 partitions for sharded exports.
+
 0.12.0 - 2018-03-15
 
   1. POM updates for GCS connector 1.8.0.
